--- a/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_offense_actions.yml
+++ b/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_offense_actions.yml
@@ -207,6 +207,14 @@
     checkCanAccess: false
 
 - type: entity
+  parent: CMGuidebookActionXenoBase
+  id: CMGuidebookActionXenoAssault
+  categories: [ HideSpawnMenu ]
+  components:
+    - type: Sprite
+      state: charge
+
+- type: entity
   parent: ActionXenoLeap
   id: ActionXenoDash
   name: Dash (40)
