--- a/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_offense_actions.yml
+++ b/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_offense_actions.yml
@@ -771,6 +771,14 @@
     useDelay: 30
 
 - type: entity
+  parent: CMGuidebookActionXenoBase
+  id: CMGuidebookActionXenoTremor
+  categories: [ HideSpawnMenu ]
+  components:
+    - type: Sprite
+      state: tremor
+
+- type: entity
   parent: ActionXenoBase
   id: ActionXenoForTheHive
   name: For The Hive!
