Add colonist ghost role spawners

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/corporate_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/corporate_survivor.yml
@@ -73,3 +73,21 @@
   parent: RMCSurvivorPresetCivilian
   id: RMCSurvivorPresetCorporate
   name: corporate survivor preset # TODO RMC14 random research notes
+
+- type: entity
+  parent: MarkerBase
+  id: RMCRandomHumanoidSurvivorCorporate
+  name: corporate survivor ghost role
+  components:
+  - type: Sprite
+    layers:
+    - state: red
+  - type: RandomHumanoidSpawner
+    settings: RMCSurvivorCorporate
+
+- type: randomHumanoidSettings
+  parent: RMCSettingsGhostRole
+  id: RMCSurvivorCorporate
+  components:
+  - type: RMCJobSpawner
+    job: CMSurvivorCorporate
