--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/doctor_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/doctor_survivor.yml
@@ -78,3 +78,21 @@
       - [ CMFirstAidKitFilledRobust ]
       - [ RMCGlassesMedicalHUDGlasses, CMFirstAidKitFilledRobust ]
       - [ RMCGlassesMedicalHUDGlasses, CMFirstAidKitFilledRobust, CMFirstAidKitSurgeryFilled ]
+
+- type: entity
+  parent: MarkerBase
+  id: RMCRandomHumanoidSurvivorDoctor
+  name: doctor survivor ghost role
+  components:
+  - type: Sprite
+    layers:
+    - state: red
+  - type: RandomHumanoidSpawner
+    settings: RMCSurvivorDoctor
+
+- type: randomHumanoidSettings
+  parent: RMCSettingsGhostRole
+  id: RMCSurvivorDoctor
+  components:
+  - type: RMCJobSpawner
+    job: CMSurvivorDoctor
