--- a/Resources/Prototypes/_RMC14/Entities/Structures/Walls/barricade_metal.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Walls/barricade_metal.yml
@@ -21,7 +21,7 @@
       fix1:
         shape:
           !type:PhysShapeAabb
-          bounds: "-0.49,-0.49,0.49,-0.38"
+          bounds: "-0.49,-0.49,0.49,-0.3"
         density: 500
         mask:
         - FullTileMask
@@ -546,3 +546,4 @@
       - Xeno
   - type: UseDelay
     delay: 0.3
+  - type: Climbable
