--- a/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_offense_actions.yml
+++ b/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_offense_actions.yml
@@ -1040,6 +1040,14 @@
   - type: ActionBlockIfResting
 
 - type: entity
+  parent: CMGuidebookActionXenoBase
+  id: CMGuidebookActionXenoTailSeize
+  categories: [ HideSpawnMenu ]
+  components:
+    - type: Sprite
+      state: tail_seize
+
+- type: entity
   parent: ActionXenoBase
   id: ActionXenoAbduct
   name: Abduct (180)
