--- a/Resources/Prototypes/_RMC14/Guidebook/rmc_guidebook.yml
+++ b/Resources/Prototypes/_RMC14/Guidebook/rmc_guidebook.yml
@@ -304,7 +304,7 @@
 - type: guideEntry
   parent: RMC
   id: RMCGuideRoleOppressor
-  priority: 26=8
+  priority: 28
   name: "Oppressor Guide"
   text: "/ServerInfo/Guidebook/_RMC14/Guides/RMCGuideRoleOppressor.xml"
 
