Fix CLF ranks for new CLF jobs

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CLF/clf_cell_commander.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CLF/clf_cell_commander.yml
@@ -5,7 +5,7 @@
   description: rmc-job-description-clf-cell-commander
   playTimeTracker: CMJobCLFCellCommander
   ranks:
-    RMCRankLanceCorporal: [ ]
+    RMCRankCLFRebelCommander: [ ]
   startingGear: RMCGearCLFCellCommander
   icon: RMCJobIconCLFCellCommander
   joinNotifyCrew: false
