--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CLF/clf_soldier.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CLF/clf_soldier.yml
@@ -5,7 +5,7 @@
   description: rmc-job-description-clf-soldier
   playTimeTracker: CMJobCLFSoldier
   ranks:
-    RMCRankLanceCorporal: [ ]
+    RMCRankCLFRebel: [ ]
   startingGear: RMCGearCLFSoldier
   icon: RMCJobIconCLFSoldier
   joinNotifyCrew: false
