--- a/Resources/Prototypes/_RMC14/Roles/Ranks/Colony/clf.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Ranks/Colony/clf.yml
@@ -6,7 +6,7 @@
 - type: rank
   id: RMCRankCLFRebelCommander
   name: Rebel Commander
-  prefix: REBC.
+  prefix: CMDR.
 
 - type: rank
   id: RMCRankCLFRebelResponder
