--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Departments/survivor_department.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Departments/survivor_department.yml
@@ -6,6 +6,7 @@
   color: "#C38312"
   roles:
   - CMSurvivor
+  - CMCivilianSurvivor
   - CMSurvivorDoctor
   - CMSurvivorEngineer
   - CMSurvivorSecurity
