--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/corporate_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/corporate_survivor.yml
@@ -38,6 +38,7 @@
       factions:
       - WeYa
     - type: IntelRescueSurvivorObjective
+  hidden: true
 
 - type: startingGear
   id: RMCGearSurvivorCorporate
