--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/engineer_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/engineer_survivor.yml
@@ -27,6 +27,7 @@
       factions:
       - Survivor
     - type: IntelRescueSurvivorObjective
+  hidden: true
 
 - type: startingGear
   id: RMCGearSurvivorEngineer
