--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/security_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/security_survivor.yml
@@ -31,6 +31,7 @@
       factions:
       - Survivor
     - type: IntelRescueSurvivorObjective
+  hidden: true
 
 - type: startingGear
   id: RMCGearSurvivorSecurity
