--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/king.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/king.yml
@@ -32,7 +32,7 @@
     - ActionXenoRegurgitate
     - ActionXenoWatch
     - ActionXenoTailStab
-# Rend
+    - ActionXenoRend
 # Doom
 # Destroy
 # Bulwark
@@ -135,4 +135,8 @@
       3: rmc-xeno-mature-king
       4: rmc-xeno-mature-king
       5: rmc-xeno-mature-king
+  - type: XenoRend
+    damage:
+      groups:
+        Brute: 25
   
