this should fix the yaml error

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/sentry.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/sentry.yml
@@ -239,3 +239,12 @@
         mask:
         - Impassable
         - BulletImpassable
+
+- type: Tag
+  id: RMCBulletSentryFireProjectile
+
+- type: Tag
+  id: RMCBulletSentryFireProjectileBlue
+
+- type: Tag
+  id: RMCBulletSentryFireProjectileSmoke
