--- a/Resources/Prototypes/_RMC14/Entities/Clothing/webbing.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/webbing.yml
@@ -515,3 +515,14 @@
       - id: CMMaskGas # TODO RMC14 l7 gasmask
       - id: RMCHeadRoyalBeret
       - id: CMMRE # TODO RMC14 TSE ORP ration
+
+- type: entity
+  parent: CMWebbingPouch
+  id: RMCWebbingPouchForecon
+  suffix: Filled, Forecon
+  components:
+  - type: StorageFill
+    contents:
+      - id: CMMarineFlask
+      # - id: RMCFacepaint # TODO FACEPAINT
+      - id: CMMRE
