--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Back/satchels.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Back/satchels.yml
@@ -235,6 +235,12 @@
       Urban: _RMC14/Objects/Clothing/Back/Chestrigs/intel/snow-urban.rsi
 
 - type: entity
+  parent: CMSatchelMarineIntel # Reskin for FORECON
+  id: RMCSatchelMarineLogisticsBig
+  name: UNMC logistics IMP backpack
+  description: A standard-issue backpack worn by logistics personnel. It is occasionally issued to combat personnel for longer term expeditions and deep space incursions.
+
+- type: entity
   parent: CMSatchelMarineIntel
   id: CMSatchelMarineLogistics
   name: Marine logistics IMP backpack
