--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Uniforms/marines.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Uniforms/marines.yml
@@ -375,6 +375,13 @@
     unfoldVerbText: rmc-sleeves-verb-unfold
     foldVerbText: rmc-sleeves-verb-fold
 
+- type: entity
+  parent: CMJumpsuitSurvivorMarine
+  id: RMCJumpsuitSurvivorMarineDropPouch
+  components:
+  - type: WebbingClothing
+    startingWebbing: RMCWebbingPouchForecon
+
 # High Command
 
 # General
