--- a/Resources/Prototypes/_RMC14/Entities/Objects/Devices/EncryptionKeys/marine.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Devices/EncryptionKeys/marine.yml
@@ -106,3 +106,15 @@
     defaultChannel: MarineCommand
   - type: Sprite
     state: binary_key
+
+- type: entity
+  parent: CMEncryptionKey
+  id: RMCEncryptionKeyFORECON
+  name: forecon encryption key
+  components:
+  - type: EncryptionKey
+    channels:
+    - MarineForecon
+    defaultChannel: MarineForecon
+  - type: Sprite
+    state: sl_key
