--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Departments/survivor_department.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Departments/survivor_department.yml
@@ -11,5 +11,6 @@
   - CMSurvivorEngineer
   - CMSurvivorSecurity
   - CMSurvivorCorporate
+  - RMCSurvivorForeconBase
   departmentRadio: null
   headOfDepartment: null
