fix suffixes not be captilized
Co-authored-by: exincore <me@exin.xyz>

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Misc/stamps.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Misc/stamps.yml
@@ -228,7 +228,7 @@
   parent: CMStampBase
   id: RMCStampFreePress
   name: free press rubber stamp
-  suffix: Admin, press
+  suffix: Admin, Press
   components:
   - type: Sprite
     state: stamp-free-press
